[gd_scene load_steps=6 format=3 uid="uid://36ybi248702i"]

[ext_resource type="Script" uid="uid://rfv4g2k8qu4w" path="res://scripts/ui/main_menu.gd" id="1_l6cm7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vue75"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6cm7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqqt6"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="MainMenuUI" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="MainMenuUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 88.0
offset_top = 56.0
offset_right = -88.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuUI/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MainMenuUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "The Control Group (scuffed main menu edition)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenuUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HostButton" type="Button" parent="MainMenuUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vue75")
text = "Host Lobby"

[node name="LobbyVisibility" type="ItemList" parent="MainMenuUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
item_count = 4
item_0/text = "Public"
item_1/text = "Friends-Only"
item_2/text = "Private"
item_3/text = "Invisible"

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMenuUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JoinButton" type="Button" parent="MainMenuUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
text = "Join Lobby"

[node name="LobbyID" type="LineEdit" parent="MainMenuUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqqt6")
placeholder_text = "Input Lobby ID here..."

[connection signal="pressed" from="MainMenuUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainMenuUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/JoinButton" to="." method="_on_join_button_pressed"]
